# ESP32components

./: README.md
CRBsurveillanceBoard/: README.md
EdgeImpulse/: .gitignore  CMakeLists.txt  README.md
I2S2sd/: CMakeLists.txt  Kconfig.projbuild  i2s2sd.c  i2s2sd.h
initI2S/: CMakeLists.txt  Kconfig.projbuild  README.md  init_i2s.c  init_i2s.h
initI2S_pdm/: CMakeLists.txt  Kconfig.projbuild  init_i2s.c  init_i2s.h
initSDmmc/: Kconfig.projbuild  initSDmmc.c  initSDmmc.h
tests/EdgeImpulse_I2S_SD/components/I2S_SD_ei/: CMakeLists.txt  Kconfig.projbuild  i2s2sd_ei.c  i2s2sd_ei.h
tests/EdgeImpulse_I2S_SD/main/: CMakeLists.txt  main.h
tests/EdgeImpulse_continuous/: CMakeLists.txt
tests/EdgeImpulse_continuous/main/: CMakeLists.txt  main.cpp  main.h  main.hpp
tests/EdgeImpulse_continuous_I2S/: CMakeLists.txt
tests/EdgeImpulse_continuous_I2S/components/I2S_ei/: CMakeLists.txt  initI2S_ei.c  initI2S_ei.h
tests/EdgeImpulse_continuous_I2S/main/: CMakeLists.txt  main.cpp  main.h
tests/EdgeImpulse_standard/main/: CMakeLists.txt  main.cpp
tests/I2S2sd/: CMakeLists.txt
tests/I2S2sd/main/: CMakeLists.txt  main.c
tests/PythonSerialPlotter/: serialplotter.py  serialplotterThreaded.py
tests/SDmmcSpeedTest/: CMakeLists.txt  README.md
tests/SDmmcSpeedTest/main/: CMakeLists.txt  sd_card_speed_test.c
tests/initI2S/main/: CMakeLists.txt  main.c
tests/initSDmmc/main/: CMakeLists.txt  sd_card_example_main.c
